# skeleton_code

FallingDetection_C/: AprotechSpeedyAlgorithm.c  AprotechSpeedyAlgorithm.h  FallingDetection.exe.stackdump  FallingDetectionFSM.c  FallingDetectionFSM.h  FallingDetectionFSM_backup.c  FallingDetectionFSM_backup.h  FallingDetectionReadData.c  FallingDetectionReadData.h  WatchData.7z  main.c  main.h  makefile
FallingDetection_C/CC2541/: 1.txt
FallingDetection_python/: FallingDetection.py  FallingDetectionEx.py  FallingDetectionHmm.py  FallingDetection_backup.py  MaldivesDemo.py  NeuralNetwork_demo.py  hungry.py  man.py  python_demo.py
c_app/: cli_task.c  cli_task.h  common.h  config_manager.c  config_manager.h  evcc_task.c  evcc_task.h  event_service.c  event_service.h  log_service.c  log_service.h  main_task.c  main_task.h  secc_message.c  secc_message.h  secc_task.c  secc_task.h  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h  timer_service.c  timer_service.h  udp_client.c  udp_client.h  udp_server.c  udp_server.h  utils.c  utils.h
c_app/client/: evcc_message.c  evcc_message.h  evcc_task.c  tcp_client.c  tcp_client.h  udp_client.c
c_app/json/: jRead.c  jRead.h  jWrite.c  jWrite.h
c_app/tools/: tools_list.c  tools_list.h
c_lvgl_gui/: ui_task.c  ui_task.h
c_lvgl_gui/font/: en_font_nanum_gothic_bold_24.c  kr_font_ChosunKg_24.c  kr_font_nanum_gothic_bold_24.c  lv_font_nanum_gothic_20.c  lv_font_nanum_gothic_bold_20.c
c_lvgl_gui/window/: ui_wnd.c  ui_wnd.h  ui_wnd_auth.c  ui_wnd_booting.c  ui_wnd_cable.c  ui_wnd_charging.c  ui_wnd_complete.c  ui_wnd_credit_card.c  ui_wnd_error.c  ui_wnd_finishing.c  ui_wnd_idle.c  ui_wnd_indicator.c  ui_wnd_power_off.c  ui_wnd_power_on.c  ui_wnd_stop.c
ev1000_client/: cli_task.cpp  cli_task.h  common.h  ev1000_client.pro  main.cpp  main_interface.h  main_task.cpp  main_task.h  media_task.cpp  media_task.h  ui_interface.h
ev1000_client/json/: json_manager.cpp  json_manager.h
ev1000_client/service/: config_manager.cpp  config_manager.h  config_service.cpp  config_service.h  event_service.cpp  event_service.h  log_service.cpp  log_service.h  media_service.cpp  media_service.h  timer_service.cpp  timer_service.h
ev1000_client/window/: charging_window.cpp  charging_window.h  charging_window.ui  idle_window.cpp  idle_window.h  idle_window.ui  main_window.cpp  main_window.h
log_parse/: __log2excel.py  log2excel - 복사본.py  log2excel-.py  log2excel-offset-in.py  log2excel-offset-meter.py  log2excel-offset-out.py  log2excel.py  log_parser.py
mkimg/: app.c  app.h  cli.c  cli.h  main.c  main.h  makefile  mkimage.sln  mkimage.vcxproj  mkimage.vcxproj.filters  typedef.h
mqtt_client/: Makefile  arduino-ing.c  common.h  main.c  mqtt-handler.c  mqtt-handler.h  nCube-Thyme.map  thyme-client.c  thyme-client.h  thyme-payload.c  thyme-payload.h  thyme-resource.c  thyme-resource.h
mqtt_client/cli/: cli-menu.c  cli-menu.h
mqtt_client/config/: config.c  config.h
mqtt_client/debug/: dbg-log.c  dbg-log.h
mqtt_client/event/: event.c  event.h
nrf_ble_android/: gradle.properties  settings.gradle
sf_openwrt/atcmd/src/app/: CMakeLists.txt  at-handler.cc  at-handler.h  cli.cc  cli.h  common.h  config-handler.cc  config-handler.h  config-manager.cc  config-manager.h  event-data.h  event.cc  event.h  gps-handler.cc  gps-handler.h  ipc-console.cc  ipc-console.h  ipc-web.cc  ipc-web.h  json-manager.cc  json-manager.h  log.cc  log.h  main-client.cc  main-client.h  main-interface.h  main.cc  modem-handler.cc  modem-handler.h  timer.cc  timer.h  utils.cc  utils.h
sf_openwrt/fw-manager/src/app/: CMakeLists.txt  fw_api.c  fw_api.h  fw_crc32.c  fw_crc32.h  fw_crypto.c  fw_dbg.c  fw_dbg.h  fw_main.c  fw_main.h  fw_manager.h  fw_merger.c  fw_splitter.c
sf_openwrt/nap-client/src/app/: CMakeLists.txt  at-handler.cc  at-handler.h  auth-handler.cc  auth-handler.h  auth-json.cc  auth-json.h  cert-manager.cc  cert-manager.h  cli.cc  cli.h  common.h  config-handler.cc  config-handler.h  config-manager.cc  config-manager.h  curl-handler.cc  curl-handler.h  ep-manager.cc  ep-manager.h  event-data.h  event.cc  event.h  fwup-handler.cc  fwup-handler.h  grpc-handler.cc  grpc-handler.h  ipc-fifo.cc  ipc-fifo.h  json-manager.cc  json-manager.h  log.cc  main-client.cc  main-client.h  main-interface.h  main.cc  monitor.cc  monitor.h  rms-handler.cc  rms-handler.h  (+12 more)
sf_openwrt/nap-client/src/app/protos/: cmd-configuration.proto  cmd-downlink.proto  cmd-service.proto  cmd-upgrade.proto  configuration.proto  google-protobuf.proto  msg-configuration.proto  msg-frame.proto  msg-heartbeat.proto  msg-location.proto  msg-service.proto
sf_openwrt/nap-client/src/app/switch/: switch_netlink.h
sf_openwrt/nap-client/src/app/test-server/: server-cli.cc  server-cli.h  server-handler.cc  server-handler.h  server-main.cc  server-proc.cc  server-proc.h
zigbee_gateway/: Makefile
(+155 files in other folders)
